projet_gl/src/test/deca/context/valid/3_39/3_39_Cast.deca
// Description:
//    Programme minimaliste faisant un Cast
//
// Resultats:
//
// Historique:
//    cree le 17/01/2024

class A {}
class B extends A {}
{
    A a = new A();
    B b = (B) (a);
}
