projet_gl/src/test/deca/context/invalid/1_03/1_03_1_DeclClass.deca
// Description:
//    Problème d'opération partielle env_types(super)
//
// Resultats:
//    Ligne 11: Superclass: B is not declared in Environment type
// 
// Historique:
//    cree le 17/01/2024

class A extends B {

}
